# state_machine

./: .gitignore  CMakeLists.txt  LICENSE.md  build.sh  build_Sanitizer.sh  build_clean.sh  build_run_unittest.sh  update_catch2.sh
doc/: State-Machine.odg
doc/sanitizer/: gcc address sanitizer – Gavin's Blog.html  memory_leak.cpp
doc/sanitizer/gcc address sanitizer – Gavin's Blog-Dateien/: main.css
src/runtime/: statemachine.h
src/targets/unittest/: global_config.h  main.cpp
src/unittest/: catch_test_list.txt  utest_statemachine.cpp
the_framework/core/: bitmacros.h  compile_guards.h  dtypes.h  meta.h
the_framework/math/: math_discrete.cpp  math_discrete.h  simple_hash_fct.h
the_framework/unittest/: utest_bitmacros.cpp  utest_math_discrete.cpp  utest_meta.cpp
toolchain/qtcreator/: sm.pro
